--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    implementation 'io.github.pilgr:paperdb:2.7.1'
 }
